# rusty-monorepo

./: .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/: SECURITY.md  dependabot.yml  pull_request_template.md  release-please-config.json  release-please-manifest.json
.github/workflows/: ci.yml  pr-title.yml  release-artifacts.yml  release-please.yml
crates/agentskills/: Cargo.toml
crates/agentskills/src/: errors.rs  filesystem.rs  lib.rs  models.rs  parser.rs  prompt.rs  validator.rs
crates/trg/: CHANGELOG.md  Cargo.toml
crates/trg/src/: fs.rs  lib.rs  main.rs
crates/trg/src/agentskills/: errors.rs  mod.rs  models.rs  parser.rs  prompt.rs  validator.rs
crates/trg/src/commands/: mod.rs
crates/trg/src/commands/ai/: mod.rs
crates/trg/src/commands/ai/skills/: mod.rs  read_properties.rs  to_prompt.rs  validate.rs
crates/trogontools/: Cargo.toml
crates/trogontools/src/: main.rs
