[workspace]
members = [
    "crates/trg",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gray_matter = "0.3"
thiserror = "1.0"
unicode-normalization = "0.1"
tempfile = "3.10"
assert_cmd = "2.0"
