[package]
name = "trg"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gray_matter = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
