[package]
name = "trogontools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trogontools"
path = "src/main.rs"

[dependencies]
agentskills = { path = "../agentskills" }
clap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
